examples/BAD/BAD_057_CONTENT_BUILDING_5/main.nut
&[R123] {"root":"yes"}

&[R123] {"mod":"no"}

@ &[R123]
